web-infras/parser/tests/fixtures/babel/core/uncategorised/425/output.txt
[SyntaxError]: Missing catch or finally after try. (1,1)
1|try { }
 |^
